サーバーテスト

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-
+    <!-- これはテストだみょん -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #4CAF50;">
       <a class="navbar-brand" href="https://getbootstrap.com/docs/4.1/examples/starter-template/#">(仮)</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
