何の日か入力できる機能の追加
カレンダーの日にちの部分をクリックするとテキストフォームを表示し何の日かを入力できる

--- a/index.html
+++ b/index.html
@@ -55,18 +55,25 @@
             			<div class="week border border-dark ">金</div>
             			<div class="week border border-dark ">土</div>
               		</div>
-                   <div class="days" v-for="(weeks,windex) in calender">
+                   <div class="OneMonthdays" v-for="(weeks,windex) in calender">
 
                         <div class="day border border-dark" v-for="(days,dindex) in weeks.days" >
-                            
+
                         	<div v-bind:class = "editMoveAnimation(windex,dindex)"
                             @mouseover="editDisplay(windex,dindex)"
                         		@mouseout="editNoneDisplay(windex,dindex)"
                         		v-if="days !== '-1' && calenderLastLineCheck(windex,dindex) === false">
-                        	    
-                                <div class="date" v-bind:style="color(windex,dindex)" >
-                                    <div class="soi smalls">敬老の日</div>
-                                    <div class="soi">{{days}}</div>
+
+                                <div class="dayarea" v-bind:style="color(windex,dindex)" >
+                                    <div class="daystring" v-if="editClickCheck(windex,dindex) === false">
+                                        {{calender[windex].whatday[dindex]}} <!-- 何の日か表示 -->
+                                    </div>
+
+                                    <div class="daystringinput" v-else>
+                                        <input v-model="calender[windex].whatday[dindex]" class="form-control" type="text"> <!-- 何の日かを入力 -->
+                                    </div>
+
+                                    <div class="daynumber">{{days}}</div>
                                 </div>
                                 <div v-bind:class="[weeks['flag'][dindex] === true ? editOnMouse:editOffMouse]"
                                 @click="editClickSet(windex,dindex)">
