--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <link href="d/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <!--  <link href="http://www.justinaguilar.com/animations/css/animations.css" rel="stylesheet"> -->
-    <!--<link href="d/css/animate.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="d/css/cssanimation.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
@@ -45,40 +43,43 @@
         			<i class="fas fa-share"></i>
         		</button>
         	</div>
-            <input type="text" id="picker">
             <div class="wrapper">
                 <div v-bind:class="clen">
                     <div class="weeks">
-            			<div class="week border border-dark sunday">日</div>
-            			<div class="week border border-dark ">月</div>
-            			<div class="week border border-dark ">火</div>
-            			<div class="week border border-dark ">水</div>
-            			<div class="week border border-dark ">木</div>
-            			<div class="week border border-dark ">金</div>
-            			<div class="week border border-dark ">土</div>
+                        <div v-for="(weekst,youbiindex) in weekString">
+                        
+            			     <div class="week border border-dark" v-bind:style="color(weekColor[youbiindex])"
+                             @mouseover="editYoubiDisplay(youbiindex)"
+                         		@mouseout="editYoubiNoneDisplay()">
+                                 {{weekst}}
+                                 <div v-bind:class="editYoubiReturnCss(youbiindex)"></div>
+                             </div>
+
+                        </div>
+
               		</div>
-                   <div class="OneMonthdays" v-for="(weeks,windex) in calendar">
 
+                   <div class="OneMonthdays" v-for="(weeks,windex) in calendar"><!-- 何の日か表示 -->
                         <div class="day border border-dark" v-for="(days,dindex) in weeks.days" >
-
-                        	<div v-bind:class = "editMoveAnimation(windex,dindex)"
+                            <!-- カレンダーの各日を表示 -->
+                        	<div v-bind:class = "editReturnCss(windex,dindex)"
                             @mouseover="editDisplay(windex,dindex)"
                         		@mouseout="editNoneDisplay(windex,dindex)"
                         		v-if="days !== '-1' && calendarLastLineCheck(windex,dindex) === false">
 
                                 <div class="dayarea" >
-                                    <div class="daystring" v-if="editClickCheck(windex,dindex) === false" v-bind:style="color(windex,dindex)">
+                                    <div class="daystring" v-if="editClickCheck(windex,dindex) === false" v-bind:style="colorWandD(windex,dindex)">
                                         {{calendar[windex].whatday[dindex]}} <!-- 何の日か表示 -->
                                     </div>
 
-                                    <div class="daystringinput" v-else>
+                                    <div class="daystringinput" v-else><!-- 編集モード -->
                                         <input v-model="calendar[windex].whatday[dindex]" class="form-control" type="text"> <!-- 何の日かを入力 -->
                                         <span class="colorWrapper"><input v-model="calendar[windex].color[dindex]" type="text" class="colorSelecter"></span>
                                     </div>
 
-                                    <div class="daynumber" v-bind:style="color(windex,dindex)">{{days}}</div>
+                                    <div class="daynumber" v-bind:style="colorWandD(windex,dindex)">{{days}}</div>
                                 </div>
-                                <div v-bind:class="[weeks['flag'][dindex] === true ? editOnMouse:editOffMouse]"
+                                <div v-bind:class="editOnMouseReturnCss(windex,dindex)"
                                 @click="editClickSet(windex,dindex)">
                                     <button type="button" class="btn btn-deepgreen rounded-circle p-0 editbtn">
                             			<i class="fas fa-edit"></i>
